--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,35 @@
-/*  your css code here. If applicable */
+body{
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	width: 100vw;
+	font-family: Arial, sans-serif;
+}
+h1, p{
+	text-align: center;
+}
+.disclaimer{
+	background-color: lightskyblue;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding: 20px 20px;
+}
+.code-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+}
+.code{
+	height: 80px;
+	width: 60px;
+	font-size: 60px;
+	text-align: center;
+	border: 2px solid #ccc;
+	outline: none;
+    transition: border-color 0.3s;
+}
+.code:focus {
+    border-color: blue;
+    box-shadow: 0 0 5px rgba(0, 0, 255, 0.5);
+}
